# pytauri-browser

./: .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pyrightconfig.json  skills-lock.json  tsconfig.json  vite.config.ts
src/: App.tsx  vite-env.d.ts
src/ai/: agent.ts
src/components/: ChatPage.tsx
src/components/ai-elements/: attachments.tsx  code-block.tsx  conversation.tsx  message.tsx  prompt-input.tsx  tool.tsx
src/lib/: browser-tauri.ts
tauri/: .taurignore  Cargo.toml  pyproject.toml  tauri.conf.json
tauri/.cargo/: config.toml
tauri/python/tauri_app/: __init__.py
tauri/python/tauri_app/bridge/: __init__.py
tauri/python/tauri_app/bridge/browser/: __init__.py  commands.py  service.py
tauri/python/tauri_app/browser/: __init__.py  commands.py  service.py
tauri/src/: lib.rs  main.rs
tauri/src/python/: binding.rs  builder.rs  mod.rs  utils.rs
