[package]
name = "starter-pytauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pytauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-pytauri = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Python Support Configuration

pytauri = { version = "0.8", features = ["standalone"] }  
pyo3 = { version = "0.25" }  

# 独立打包时使用 `bundle-release`，避免把 pyembed 复制到 `target/release`，以免影响 `tauri dev`
# 见 https://pytauri.github.io/pytauri/latest/usage/tutorial/build-standalone/
[profile.bundle-dev]
inherits = "dev"

[profile.bundle-release]
inherits = "release"
